documentacion/obtenida/ARINC 429/driver and software/LX1553-3/API/L13W32.H

typedef void VOID;
typedef void * LPVOID;
typedef int INT;
typedef unsigned short USHORT;
typedef unsigned short * LPUSHORT;
typedef unsigned long ULONG;
typedef unsigned long * LPMSGADDR;
typedef const char * LPCSTR;
typedef int BOOL;
typedef int HCARD;
typedef int ERRVAL;
typedef int SCHNDX;

L13W32API SCHNDX __stdcall L13_BCSchedBranchDin1(SCHNDX destindex,HCARD handleval);

L13W32API SCHNDX __stdcall L13_BCSchedBranchEx(USHORT condition1,USHORT condition2,USHORT condition3,SCHNDX destindex,HCARD handleval);

L13W32API ERRVAL __stdcall L13_BCSchedBuild(USHORT nummsgs,LPMSGADDR msgaddr,LPUSHORT freq,HCARD handleval);

L13W32API SCHNDX __stdcall L13_BCSchedCall(SCHNDX destindex,HCARD handleval);

L13W32API SCHNDX __stdcall L13_BCSchedCallCond(USHORT condition,SCHNDX destindex,HCARD handleval);

L13W32API SCHNDX __stdcall L13_BCSchedCallCondEx(USHORT condition1,USHORT condition2,USHORT condition3,SCHNDX destindex,HCARD handleval);

L13W32API SCHNDX __stdcall L13_BCSchedEntry(HCARD handleval);

L13W32API SCHNDX __stdcall L13_BCSchedFrameEnd(HCARD handleval);

L13W32API SCHNDX __stdcall L13_BCSchedFrameStart(ULONG timeval,HCARD handleval);

L13W32API SCHNDX __stdcall L13_BCSchedGap(USHORT gapval,HCARD handleval);

L13W32API SCHNDX __stdcall L13_BCSchedGoto(SCHNDX destindex,HCARD handleval);

L13W32API SCHNDX __stdcall L13_BCSchedHalt(HCARD handleval);

L13W32API SCHNDX __stdcall L13_BCSchedInt(USHORT tagval,HCARD handleval);

L13W32API SCHNDX __stdcall L13_BCSchedIntCond(USHORT condition,USHORT tagval,HCARD handleval);

L13W32API SCHNDX __stdcall L13_BCSchedIntCondEx(USHORT condition1,USHORT condition2,USHORT condition3,USHORT tagval,HCARD handleval);

L13W32API SCHNDX __stdcall L13_BCSchedNop(HCARD handleval);

L13W32API SCHNDX __stdcall L13_BCSchedPause(HCARD handleval);

L13W32API SCHNDX __stdcall L13_BCSchedPulse(HCARD handleval);

L13W32API SCHNDX __stdcall L13_BCSchedPulse0(HCARD handleval);

L13W32API SCHNDX __stdcall L13_BCSchedPulse1(HCARD handleval);

L13W32API SCHNDX __stdcall L13_BCSchedRestart(HCARD handleval);

L13W32API SCHNDX __stdcall L13_BCSchedRetryEx(USHORT condition1,USHORT condition2,USHORT condition3,USHORT retryflag,USHORT retries,HCARD handleval);

L13W32API SCHNDX __stdcall L13_BCSchedReturn(HCARD handleval);

L13W32API SCHNDX __stdcall L13_BCSchedUser(ULONG useraddr,HCARD handleval);

L13W32API SCHNDX __stdcall L13_BCSetEntry(HCARD handleval);

L13W32API ERRVAL __stdcall L13_BCSetTimeout(USHORT timeoutval,HCARD handleval);

L13W32API ULONG __stdcall L13_BlkAddr(INT taval,HCARD handleval);

L13W32API USHORT __stdcall L13_BlkOptRd(INT taval,HCARD handleval);

L13W32API ERRVAL __stdcall L13_BlkOptWr(USHORT rtopt,INT taval,HCARD handleval);

L13W32API ULONG __stdcall L13_BlkPtrRd(INT taval,HCARD handleval);

L13W32API VOID __stdcall L13_BlkPtrWr(ULONG descaddr,INT taval,HCARD handleval);

L13W32API ERRVAL __stdcall L13_BlkRd(LPUSHORT block,INT taval,HCARD handleval);

L13W32API ERRVAL __stdcall L13_BlkReset(INT taval,HCARD handleval);

L13W32API USHORT __stdcall L13_BlkSWDRd(INT taval,HCARD handleval);

L13W32API ERRVAL __stdcall L13_BlkSWDWr(USHORT swdval,INT taval,HCARD handleval);

L13W32API ERRVAL __stdcall L13_BlkWipe(HCARD handleval);

L13W32API ERRVAL __stdcall L13_BlkWr(LPUSHORT block,INT taval,HCARD handleval);

L13W32API ERRVAL __stdcall L13_CardBoot(HCARD handleval);

L13W32API ERRVAL __stdcall L13_CardCloseAll(VOID);

L13W32API ERRVAL __stdcall L13_CardConfig(BOOL enableflag,USHORT command,USHORT taval,HCARD handleval);

L13W32API ULONG __stdcall L13_CardGetInfo(USHORT infotype,HCARD handleval);

L13W32API ERRVAL __stdcall L13_CardGetInfoEx(LPUSHORT bufmodel,USHORT bufmodelcount,LPUSHORT buffeature,USHORT buffeaturecount,HCARD handleval);

L13W32API VOID __stdcall L13_CardInit(VOID);

L13W32API BOOL __stdcall L13_CardIsRunning(HCARD handleval);

L13W32API ERRVAL __stdcall L13_CardNop(HCARD handleval);

L13W32API ERRVAL __stdcall L13_CardNopEx(HCARD handleval);

L13W32API HCARD __stdcall L13_CardOpenEx(LPCSTR cardname,INT cardnum);

L13W32API HCARD __stdcall L13_CardOpenExx(LPCSTR cardname,INT cardnum,LPVOID hAppWnd,USHORT uiRemovalMsg);

L13W32API VOID __stdcall L13_CardResetEx(HCARD handleval);

L13W32API ERRVAL __stdcall L13_CardResume(HCARD handleval);

L13W32API ERRVAL __stdcall L13_CardTest(USHORT level,HCARD handleval);

L13W32API ERRVAL __stdcall L13_CardTest0(HCARD handleval);