documentacion/obtenida/ARINC 429/driver and software/LX1553-3/API/L13W32NET.CS

        [DllImport("L13W32.DLL", EntryPoint = "_L13_BCSchedBranchDin1@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_BCSchedBranchDin1(Int32 destindex, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_BCSchedBranchEx@20", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_BCSchedBranchEx(UInt16 condition1, UInt16 condition2, UInt16 condition3, Int32 destindex, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_BCSchedBuild@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_BCSchedBuild(UInt16 nummsgs, ref UInt32 msgaddr, ref UInt16 freq, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_BCSchedCall@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_BCSchedCall(Int32 destindex, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_BCSchedCallCond@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_BCSchedCallCond(UInt16 condition, Int32 destindex, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_BCSchedCallCondEx@20", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_BCSchedCallCondEx(UInt16 condition1, UInt16 condition2, UInt16 condition3, Int32 destindex, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_BCSchedEntry@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_BCSchedEntry(UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_BCSchedFrameEnd@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_BCSchedFrameEnd(UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_BCSchedFrameStart@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_BCSchedFrameStart(UInt32 timeval, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_BCSchedGap@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_BCSchedGap(UInt16 gapval, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_BCSchedGoto@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_BCSchedGoto(Int32 destindex, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_BCSchedHalt@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_BCSchedHalt(UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_BCSchedInt@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_BCSchedInt(UInt16 tagval, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_BCSchedIntCond@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_BCSchedIntCond(UInt16 condition, UInt16 tagval, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_BCSchedIntCondEx@20", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_BCSchedIntCondEx(UInt16 condition1, UInt16 condition2, UInt16 condition3, UInt16 tagval, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_BCSchedNop@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_BCSchedNop(UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_BCSchedPause@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_BCSchedPause(UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_BCSchedPulse@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_BCSchedPulse(UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_BCSchedPulse0@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_BCSchedPulse0(UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_BCSchedPulse1@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_BCSchedPulse1(UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_BCSchedRestart@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_BCSchedRestart(UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_BCSchedRetryEx@24", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_BCSchedRetryEx(UInt16 condition1, UInt16 condition2, UInt16 condition3, UInt16 retryflag, UInt16 retries, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_BCSchedReturn@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_BCSchedReturn(UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_BCSchedUser@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_BCSchedUser(UInt32 useraddr, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_BCSetEntry@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_BCSetEntry(UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_BCSetTimeout@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_BCSetTimeout(UInt16 timeoutval, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_BlkAddr@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L13_BlkAddr(Int32 taval, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_BlkOptRd@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 L13_BlkOptRd(Int32 taval, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_BlkOptWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_BlkOptWr(UInt16 rtopt, Int32 taval, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_BlkPtrRd@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L13_BlkPtrRd(Int32 taval, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_BlkPtrWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L13_BlkPtrWr(UInt32 descaddr, Int32 taval, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_BlkRd@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_BlkRd(ref UInt16 block, Int32 taval, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_BlkReset@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_BlkReset(Int32 taval, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_BlkSWDRd@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 L13_BlkSWDRd(Int32 taval, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_BlkSWDWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_BlkSWDWr(UInt16 swdval, Int32 taval, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_BlkWipe@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_BlkWipe(UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_BlkWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_BlkWr(ref UInt16 block, Int32 taval, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_CardBoot@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_CardBoot(UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_CardCloseAll@0", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_CardCloseAll();
        [DllImport("L13W32.DLL", EntryPoint = "_L13_CardConfig@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_CardConfig(Int32 enableflag, UInt16 command, UInt16 taval, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_CardGetInfo@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L13_CardGetInfo(UInt16 infotype, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_CardGetInfoEx@20", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_CardGetInfoEx(ref UInt16 bufmodel, UInt16 bufmodelcount, ref UInt16 buffeature, UInt16 buffeaturecount, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_CardInit@0", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L13_CardInit();
        [DllImport("L13W32.DLL", EntryPoint = "_L13_CardIsRunning@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_CardIsRunning(UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_CardNop@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_CardNop(UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_CardNopEx@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_CardNopEx(UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_CardOpenEx@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L13_CardOpenEx(ref string cardname, Int32 cardnum);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_CardOpenExx@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L13_CardOpenExx(ref string cardname, Int32 cardnum, IntPtr happwnd, UInt16 uiremovalmsg);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_CardResetEx@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L13_CardResetEx(UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_CardResume@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_CardResume(UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_CardTest@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_CardTest(UInt16 level, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_CardTest0@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_CardTest0(UInt32 handleval);
